--- a/back-app/client/dockerfile
+++ b/back-app/client/dockerfile
@@ -1,21 +1,12 @@
-# Use Node.js image
-FROM node:14
+FROM node:18
 
-# Create app directory
-WORKDIR /app
+WORKDIR /usr/src/app
 
-# Install app dependencies
 COPY package*.json ./
 RUN npm install
 
-# Copy app source code
-COPY ./src ./src
+COPY . .
 
-# Copy SQLite database
-COPY ../db ./db
+EXPOSE 8000
 
-# Expose port (if needed)
-EXPOSE 3003
-
-# Start the client app (adjust command as needed)
-CMD ["node", "src/client.js"]
+CMD ["npm", "start"]
