--- a/back-app/client/package.json
+++ b/back-app/client/package.json
@@ -3,10 +3,10 @@
     "version": "1.0.0",
     "main": "src/client.js",
     "scripts": {
-      "start": "node src/client.js"
+        "start": "node src/client.js"
     },
     "dependencies": {
-      "ws": "^8.0.0"
+        "dotenv": "^16.4.5",
+        "ws": "^8.0.0"
     }
-  }
-  
+}
