--- a/back-app/db/dockerfile
+++ b/back-app/db/dockerfile
@@ -1,15 +1,21 @@
-# Use the lightweight Alpine image
-FROM alpine:latest
+# Use Node.js base image
+FROM node:18
 
-# Install SQLite
-RUN apk add --no-cache sqlite sqlite-dev
+# Set working directory
+WORKDIR /usr/src/app
 
-# Create a directory for the database
-RUN mkdir /data
+# Copy package.json and install dependencies
+COPY package*.json ./
+RUN npm install
 
+# Force rebuild of native dependencies (for SQLite)
+RUN npm rebuild sqlite3
 
-COPY initDb.js /initDb.js
+# Copy the rest of the code, excluding any potential SQLite files
+COPY . .
 
-WORKDIR /data
+# Expose necessary port
+EXPOSE 4001
 
-CMD ["node", "/initDb.js"]
+# Set the startup command to initialize the database
+ENTRYPOINT ["sh", "/usr/src/app/startup.sh"]
