--- a/back-app/isp-server/package.json
+++ b/back-app/isp-server/package.json
@@ -6,6 +6,7 @@
         "start": "node src/server.js"
     },
     "dependencies": {
+        "dotenv": "^16.4.5",
         "node-cron": "^3.0.3",
         "sqlite3": "^5.0.2",
         "ws": "^8.0.0"
