--- a/back-app/router/package.json
+++ b/back-app/router/package.json
@@ -3,11 +3,11 @@
     "version": "1.0.0",
     "main": "src/server.js",
     "scripts": {
-      "start": "node src/server.js"
+        "start": "node src/server.js"
     },
     "dependencies": {
-      "sqlite3": "^5.0.2",
-      "ws": "^8.0.0"
+        "dotenv": "^16.4.5",
+        "sqlite3": "^5.0.2",
+        "ws": "^8.0.0"
     }
-  }
-  
+}
