--- a/front-app/tsconfig.app.json
+++ b/front-app/tsconfig.app.json
@@ -1,30 +1,34 @@
 {
   "compilerOptions": {
+    // Output and compatibility
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "noEmit": true,
     "jsx": "react-jsx",
 
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-  },
-  "include": ["src"],
-  "compilerOptions": {
+    // Disable TypeScript strictness to behave more like JS
+    "strict": false, 
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false,
+
+    // Suppress type-related checks
+    "skipLibCheck": true,
+    "noEmit": true, // No TypeScript code output
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "allowJs": true, // Allow JavaScript files
+    "checkJs": false, // Do not perform type checking on JS files
+
+    // Paths configuration for module aliasing
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
