fixed errors again

--- a/front-app/nginx.conf
+++ b/front-app/nginx.conf
@@ -1,9 +1,20 @@
 server {
-    listen       80;
-    listen  [::]:80;
+    listen 80;
+    server_name localhost;
 
+    # Serve static files from /usr/share/nginx/html (default)
     location / {
         root   /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        index  index.html;
+
+        # Redirect all requests to index.html for React Router to handle
+        try_files $uri /index.html;
+    }
+
+    # Optional: location for 404 errors
+    error_page 404 /index.html;
+
+    location /static/ {
+        root /usr/share/nginx/html;
     }
 }
