--- a/back-app/model-server/dockerfile
+++ b/back-app/model-server/dockerfile
@@ -1,18 +1,21 @@
-# Use a lightweight Python image
-FROM python:3.10-slim
+# Start with a base Python image
+FROM python:3.9-slim
 
-# Set working directory
+# Set a working directory
 WORKDIR /app
 
-# Copy FastAPI app files
-COPY src /app/src
-COPY requirements.txt /app/requirements.txt
+# Copy requirements.txt to the container
+COPY requirements.txt .
 
-# Install dependencies
-RUN pip install --no-cache-dir -r /app/requirements.txt
+# Install dependencies with CPU-only torch, without caching
+RUN pip install fastapi uvicorn pydantic pandas numpy==1.26.4 \
+    && pip install torch==2.0.1+cpu -f https://download.pytorch.org/whl/torch_stable.html \
+    && pip install stable-baselines3
+# Copy the rest of the application code
+COPY src ./src
 
-# Expose port
+# Expose the FastAPI port
 EXPOSE 8010
 
-# Command to start FastAPI app
+# Command to run FastAPI application with uvicorn
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8010"]
